@@ -1,15 +1,15 @@
 /****************************************************************************
  *
  * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/stdio/fflush.c,v $
- * $Date: 2001/01/29 15:10:21 $
- * $Revision: 1.2 $
+ * $Date: 2003/04/13 16:21:02 $
+ * $Revision: 1.3 $
  * $State: Exp $
- * $Author: admin $
+ * $Author: alex $
  *
  ***************************************************************************/
 
 #ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: fflush.c,v 1.2 2001/01/29 15:10:21 admin Exp $";
+static const char rcs_id[] = "$Id: fflush.c,v 1.3 2003/04/13 16:21:02 alex Exp $";
 #endif
 
 #include <stdio.h>
@@ -38,11 +38,14 @@ fflush (FILE *stream)
       return lossage ? EOF : 0;
     }
 
-  if (!__validfp (stream) || !stream->__mode.__write)
+  if (!__validfp (stream))
     {
       errno = EINVAL;
       return EOF;
     }
+
+  if (!stream->__mode.__write)
+    return 0;
 
   return __flsbuf (EOF, stream);
 }
